--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.542.0",
+    "mixpanel-browser": "^2.70.0",
     "motion": "^12.23.12",
     "next": "15.5.2",
     "react": "19.1.0",
