--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "embla-carousel-react": "^8.6.0",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.542.0",
+    "mixpanel-browser": "^2.70.0",
     "motion": "^12.23.12",
     "next": "15.5.2",
     "react": "19.1.0",
