Add API integration to PlansSections component for dynamic subscription data retrieval. Update .env.example to include NEXT_PUBLIC_API_URL. Enhance UI to reflect selected pricing options based on user interaction.

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_BOOSTRA_URL=https://app.getboostra.com
 NEXT_PUBLIC_MIXPANEL_API_URL=https://api-eu.mixpanel.com
 NEXT_PUBLIC_MIXPANEL_TOKEN=YOUR_PROJECT_TOKEN
+NEXT_PUBLIC_API_URL=https://api.getboostra.com
